use a tooltip to display additional information to avoid text truncation

--- a/plugins/Live/stylesheets/live.less
+++ b/plugins/Live/stylesheets/live.less
@@ -256,9 +256,6 @@ span.visitorLogIcons:after {
 }
 
 .visitorLogIconWithDetails .details {
-    position: absolute;
-    left: 0;
-    margin-top: 5px;
     display: none;
 }
 
@@ -274,10 +271,6 @@ span.visitorLogIcons:after {
     margin: auto 0;
 }
 
-.visitorLogIconWithDetails:hover .details {
-    display: block;
-}
-
 .visitorLogIcons .visitorDetails {
     float: left;
     display: block;
@@ -288,8 +281,4 @@ span.visitorLogIcons:after {
     float: right;
     display: block;
     margin-bottom: 5px;
-}
-
-.visitorLogIconWithDetails .details li {
-    height: 20px;
 }
